# libre-printer

./: .gitignore  .readthedocs.yaml  MANIFEST.in  Makefile  README.md  README_FR.md  libreprinter.conf  setup.cfg
debian/: changelog  control  copyright  libre-printer.postinst  libre-printer.triggers  libre-printer.udev  libre-printer@.service  rules
debian/patches/: default_output_path.patch  python_env_path.patch  serial_tty_name.patch  series
doc/source/: FAQ.rst  conf.py  converters_doc.rst  core_doc.rst  dev_documentation.rst  dev_overview.rst  dev_work_with_source.rst  examples.rst  index.rst  installation.rst  interface_usage.rst  license.rst  project_presentation.rst  service_configuration.rst  watchdogs_doc.rst
doc/source/_static/css/: patch.css
doc/source/_templates/: layout.html  piwik.html
firmware/: firmware_updater.sh  restart_interface.py
firmware/src/: libreprinter_test_firmware.ino
libreprinter/: __main__.py  commons.py  config_parser.py  escp2_converter.py  file_handler.py  interface.py  jobs_to_printer_watchdog.py  legacy_interprocess_com.py  pcl_to_pdf.py  pcl_to_pdf_watchdog.py  plugins_handler.py
libreprinter/handlers/: __init__.py  serial_handler.py
libreprinter/plugins/: __init__.py  lp_escapy_converter.py  lp_escp2_converter.py  lp_hpgl_converter.py  lp_jobs_to_printer_watchdog.py  lp_pcl_to_pdf_watchdog.py  lp_ps_converter.py  lp_seiko_qt2100_converter.py  lp_txt_converter.py
test_data/: escp2_1.prn  escp2_1_plain.txt  escp2_1_strip.ps  escp2_1_strip.txt  seiko_qt2100_A10S.csv  seiko_qt2100_A10S.raw  test_page_escp2.prn  test_page_pcl.prn
tests/: __init__.py  test_config_parser.py  test_config_parser_plugin_escapy.py  test_config_parser_plugin_seiko.py  test_config_parser_plugin_text.py  test_escp2_converter.py  test_file_handler.py  test_interface.py  test_jobs_to_printer_watchdog.py  test_legacy_interprocess_com.py  test_plugins.py  test_watchdogs.py
tests/helpers/: diff_pdf.py
tools/: input_tty_generator.py
