[metadata]
name = libreprinter
version = attr: libreprinter.__version__
description =
long_description = file: README.md
long_description_content_type = text/markdown
author = Ysard
author_email =
url =

license_files = LICENSE
keywords = GUI, health
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
zip_safe = False
include_package_data = True
packages = libreprinter
install_requires =
    pyserial>=3.5
    watchdog @ git+https://github.com/gorakhargosh/watchdog.git@refs/pull/747/head

[options.extras_require]
dev =
    pytest-cov>=2.6.1
    pytest-timeout
    pytest>=5.2.0
    zest.releaser[recommended]
doc =
    # Doc
    sphinx
    sphinx_rtd_theme

[options.entry_points]
console_scripts =
    libreprinter = libreprinter.__main__:main

[zest.releaser]
create-wheel = yes
python-file-with-version = libreprinter/__init__.py
