[metadata]
name = libreprinter
version = attr: libreprinter.__version__
description = Libreprinter is a software allowing to use the Centronics and serial printing functions of vintage computers on modern equipement through a tiny hardware interface.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ysard
author_email = ysard_git@gmx.fr
url = https://github.com/ysard/libreprinter

license_files = LICENSE
keywords = printer, centronics, serial, parallel, dotmatrix, arduino, escp2, pcl
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = libreprinter
install_requires =
    argparse
    pyserial>=3.5
    numpy>=1.19.5
    importlib_resources;python_version<"3.7"
    watchdog

[options.extras_require]
dev =
    pytest-cov>=2.6.1
    pytest-timeout
    pytest>=6.2.0
    zest.releaser[recommended]
    coverage-badge
doc =
    # Doc
    sphinx
    sphinx_rtd_theme>=1.0.0
    sphinxcontrib-mermaid
    sphinx-argparse

[options.entry_points]
console_scripts =
    libreprinter = libreprinter.__main__:main

[zest.releaser]
create-wheel = yes
python-file-with-version = libreprinter/__init__.py
